fixed side - links layer collapse

--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -270,6 +270,8 @@
     @include onDesktop {
       right: 1%;
       bottom: -70%;
+
+      z-index: 10;
     }
 
     @include onTablet {
@@ -280,6 +282,8 @@
     @include onMobile {
       right: 2%;
       bottom: -430%;
+
+      z-index: 10;
     }
   }
 }
