--- a/src/styles/blocks/materials.scss
+++ b/src/styles/blocks/materials.scss
@@ -357,6 +357,8 @@
         top: 3%;
         right: 1%;
 
+        z-index: 10;
+
       }
 
       @include onMobile {
